# aosc-mirror

./: Cargo.toml  README.md  config.aosc.example.toml  config.debian.example.toml  config.example.toml
src/: aosc.rs  config.rs  debian.rs  lib.rs  metadata.rs  server.rs  sync.rs  utils.rs  verify.rs
