[package]
name = "aosc-mirror"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sync-invoker"

[[bin]]
name = "sync-client"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
console-subscriber = "0.4.1"
deb822-lossless = { version = "0.2.4", features = ["derive"] }
digest = "0.10.7"
ed25519-dalek = "2"
env_logger = "0.11.8"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
log = "0.4.27"
md5 = "0.7.0"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["stream"] }
sequoia-cert-store = "0.7.0"
sequoia-openpgp = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["tokio-macros", "rt-multi-thread", "process", "fs"] }
toml = "0.8.22"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"
